Quorum3/Library/Tests/TypeChecker/Pass/BooleanEquals.quorum
class Main
    action Main
        Boolean t 
        t:SetValue(true)
        boolean p = true

        output t:Equals(false)
        output p:Equals(false)
    end
end