Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumberBoolObjWrapped.quorum
class main
    action Main
        Boolean bool
        bool:setValue(true)
        number n = bool
    end
end